[package]
name = "wd_tools"
version = "0.8.6"
edition = "2021"
authors = ["wangdong <1443965173@qq.com>"]
license = "MIT/Apache-2.0"
description = "tools for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1.0.69",optional=true}
base64 ={version="0.21.0",optional=true}
lazy_static = {version = "1.4.0",optional = true}
rust-crypto ={version="0.2.36",optional=true}
rustc-serialize = {version= "0.3.24",optional=true}
uuid = { version = "1.3.0",optional=true}
wd_sonyflake = {version= "0.0.1",optional=true}
chrono = {version = "0.4.23",optional = true}
tokio = {version = "1.26.0", optional = true}
futures = {version = "0.3.28",optional = true}
pin-project-lite = {version = "0.2.9",optional = true}

[features]
default=[]
#default=["b64", "md5", "point-free", "hex", "ptr", "snowflake","uid","time","sync","fs","pool","chan"]
full=["b64", "md5", "point-free", "hex", "ptr", "snowflake","uid","time","sync","fs","pool","chan"]
b64=["base64", "anyhow"]
md5=["rust-crypto"]
point-free=[]
hex=["rustc-serialize"]
ptr=[]
snowflake=["wd_sonyflake", "lazy_static"]
uid=["uuid/v4","uuid/v5"]
time=["chrono"]
sync=["anyhow","tokio/sync","tokio/time","tokio/rt-multi-thread"]
fs=["tokio/fs"]
pool=["tokio/rt-multi-thread"]
chan=["tokio/time","futures","pin-project-lite"]
