[package]
name = "wd_tools"
version = "0.13.12"
edition = "2021"
authors = ["wangdong <1443965173@qq.com>"]
license = "MIT/Apache-2.0"
description = "tools for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1.0.69",optional=true}
base64 ={version="0.21.0",optional=true}
lazy_static = {version = "1.4.0",optional = true}
rust-crypto ={version="0.2.36",optional=true}
rustc-serialize = {version= "0.3.24",optional=true}
uuid = { version = "1.3.0",optional=true}
wd_sonyflake = {version= "0.0.1",optional=true}
chrono = {version = "0.4.23",optional = true}
tokio = {version = "1.26.0", optional = true}
futures = {version = "0.3.28",optional = true}
pin-project-lite = {version = "0.2.9",optional = true}
lru = {version = "0.12.1",optional = true}
async-trait = { version = "0.1.79",optional = true }
reqwest = { version = "0.12.0",features = ["json"],optional = true }
regex = {version = "1.10.5",optional = true}

[features]
default=[]
#default=["b64", "md5", "point-free", "hex", "ptr", "snowflake","uid","time","sync","fs","pool","coll","ctx","http","mutex","regex_simple","global"]
full=["b64", "md5", "point-free", "hex", "ptr", "snowflake","uid","time","sync","fs","pool","chan","coll","ctx","http","mutex","regex_simple","global"]
b64=["base64", "anyhow"]
md5=["rust-crypto"]
sha1=["rust-crypto"]
point-free=[]
hex=["rustc-serialize"]
ptr=[]
snowflake=["wd_sonyflake", "lazy_static"]
uid=["uuid/v4","uuid/v5"]
time=["chrono"]
sync=["anyhow","lru","tokio/sync","tokio/time","tokio/rt-multi-thread","tokio/macros","pin-project-lite"]
fs=["tokio/fs"]
pool=["tokio/rt-multi-thread","tokio/time","async-trait"]
chan=["tokio/time","futures","pin-project-lite"]
coll=[]
ctx=["pin-project-lite","sha1","tokio/macros"]
http=["anyhow","ctx","ptr","reqwest","async-trait"]
mutex=[]
regex_simple=["regex"]
global = []